--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>웹 샘플</title>
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="phone">
@@ -50,7 +50,7 @@
             <img
               id="subiconImage"
               name="subiconImage"
-              src="/static/subicon.png"
+              src="subicon.png"
               alt="서브 아이콘"
             />
           </button>
@@ -68,7 +68,7 @@
       </header>
 
       <main id="mainScreen">
-        <img id="mainImage" name="mainImage" src="/static/maicon.png" alt="메인 이미지" />
+        <img id="mainImage" name="mainImage" src="maicon.png" alt="메인 이미지" />
 
         <div id="chatLog" class="hidden">
           <button id="chatLogCloseBtn" type="button">×</button>
@@ -129,6 +129,6 @@
       <div id="sidebarOverlay"></div>
     </div>
   </div>
-  <script src="/scripts.js" defer></script>
+  <script src="scripts.js" defer></script>
 </body>
 </html>
